--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/8b1f3b9b8a.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="profile/styles.css">
+  <link rel="stylesheet" href="profile/style.css">
   <meta name="theme-color" content="#0b66ff"/>
 </head>
 <body>
